New message in blog.

--- a/blog.html
+++ b/blog.html
@@ -30,8 +30,22 @@
 </TABLE>
 <BR>
 
+<FONT SIZE="5"><B>27.01.2011 - Релиз 
+<A HREF="https://github.com/pa23/r49/downloads">r49-11.06</A>
+</B></FONT>
+<P>
+<ol>
+    <li>В сообщениях об ошибках теперь выводится информация о функции, в которой что-то пошло не так.</li>
+    <li>Улучшение в поведении программы в нештатных ситуациях.</li>
+    <li>Для объектов-наследников QObject возвращен delete. Лучше перестраховаться...</li>
+    <li>Некоторые улучшения стиля кода.</li>
+    <li>Улучшение производительности функции проверки значений массивов.</li>
+    <li>Обновлен файл перевода интерфейса на русский язык.</li>
+</ol>
+</P>
+
 <FONT SIZE="5"><B>17.01.2011 - Релиз 
-<A HREF="https://github.com/pa23/r49/downloads">r49-11.04</A>
+r49-11.04
 </B></FONT>
 <P>
 <ol>
