--- a/projects.html
+++ b/projects.html
@@ -33,42 +33,46 @@
 <FONT SIZE="5"><B>r49:</B></FONT>
 <SPAN>
     <A HREF="https://github.com/pa23/r49">Страница проекта</A> | 
-    <A HREF="http://sites.google.com/site/pa23r49/">Старый сайт</A> | 
     <A HREF="https://github.com/pa23/r49/downloads">Загрузки</A>
 </SPAN>
 <P>
-Программный комплекс r49 предназначен для расчета удельных выбросов вредных веществ (ВВ) 
-с отработавшими газами (ОГ) дизельных двигателей, испытываемых по стационарным циклам на 
-соответствие нормативам Евро-0..Евро-6 (Правила ЕЭК ООН №49 Ревизия 1 и Ревизия 4), 
-Правила ЕЭК ООН №96 Ревизия 1, ОСТ 37.001.234-81, ГОСТ 17.2.2.05-97, ГОСТ 30574-98 и ГОСТ Р 51249-99.
+Программный комплекс, предназначенный для расчета удельных выбросов вредных веществ 
+с отработавшими газами дизельных двигателей, испытываемых по стационарным циклам 
+на соответствие требованиям Правил ЕЭК ООН №49 Ревизия 1 и Ревизия 4 
+(нормативы с Евро-0 по Евро-6), Правил ЕЭК ООН №96 Ревизия 1, ОСТ 37.001.234-81, 
+ГОСТ 17.2.2.05-97, ГОСТ 30574-98 и ГОСТ Р 51249-99.
+<BR>
+<B>r49</B> является свободным программным обеспечением и состоит из библиотеки <B>toxic</B> и программы <B>Qr49</B>. 
+Программный комплекс написан на языке программирования C++ с использованием Qt.
 <BR><BR>
-<B>Возможности r49:</B>
+<B>Основные возможности:</B>
 <ul>
-    <li>расчет оборотов A, B и C для стационарных циклов Евро-3..Евро-6;</li>
-    <li>расчет точек (частота вращения коленчатого вала двигателя, крутящий момент, потери мощности на привод вентилятора и т.д.) для 13-ти ступенчатого цикла Евро-0..Евро-2, 5-ти и 8-ми ступенчатых циклов, 13-ти ступенчатого цикла Евро-3..Евро-6, циклов C1, D1, D2, E1, E2, E3, E5, F, G1, G2, а также циклов по ОСТ 37.001.234-81 и ГОСТ 17.2.2.05-97;</li>
-    <li>расчет удельных выбросов ВВ с ОГ дизелей по циклам: 13-ти ступенчатому Евро-0..Евро-2, 5-ти и 8-ми ступенчатому, 13-ти ступенчатому Евро-3..Евро-6, по циклам C1, D1, D2, E1, E2, E3, E5, F, G1, G2, по циклам согласно ОСТ 37.001.234-81 и ГОСТ 17.2.2.05-97. По результатам расчетов удельных выбросов ВВ создаются отчеты;</li>
-    <li>расчет мощности двигателя, приведенной к нормальным атмосферным условиям (Правила ЕЭК ООН №85);</li>
-    <li>расчет дымности отработавших газов по циклу ELR;</li>
-    <li>"свободный" расчет удельных выбросов (напр., при снятии регулировочных характеристик, без привязки к точкам какого-либо цикла).</li>
+    <li>Расчет точек (значений частоты вращения коленчатого вала двигателя, крутящего момента, потерь мощности на привод вентилятора и т.д.) для всех стационарных испытательных циклов дизельных двигателей, описанных в приведенных выше нормативных документах.</li>
+    <li>Расчет удельных выбросов вредных веществ с отработавшими газами по любому из стационарных испытательных циклов дизельных двигателей, описанных в приведенных выше нормативных документах.</li>
+    <li>Расчет мощности двигателя, приведенной к нормальным атмосферным условиям (Правила ЕЭК ООН №85).</li>
+    <li>"Свободный" расчет удельных выбросов по точкам цикла (напр., при снятии регулировочных характеристик, внешней скоростной характеристики и т.п.).</li>
+    <li>Автоматическое создание каталога с исходными данными, конфигурацией, результатами и отчетами по завершению расчета.</li>
+    <li>Использование программы Qr49 без загрузки графического интерфейса, что может быть востребовано, например, при пакетной обработке данных.</li>
 </ul>
-<B>r49 также позволяет:</B>
+<B>Дополнительные возможности:</B>
 <ul>
-    <li>ориентироваться на крутящий момент брутто или мощность брутто (по выбору) при расчете мощности двигателя нетто;</li>
-    <li>использовать в расчете непосредственные замеры расхода воздуха или расчитывать его по значениям разрежения на измерительном сопле;</li>
-    <li>использовать в расчете концентрации оксидов азота, замеренные как во влажном, так и в сухом состоянии;</li>
-    <li>производить обратный расчет относительно оксидов азота, т.е. рассчитывать концентрации оксидов азота, исходя из значений удельных выбросов для каждой точки испытательного цикла;</li>
-    <li>рассчитывать степень рециркуляции отработавших газов (РОГ), основываясь на замерах концентраций диоксида углерода в воздухе, поступающем в цилиндры двигателя, и в отработавших газах;</li>
-    <li>рассчитывать удельные выбросы "твердых" частиц (ТЧ) по циклу, основываясь на массах осевших на фильтрах ТЧ, или по значениям дымности ОГ, представленной в 1/м, % или FSN;</li>
-    <li>оценивать корректность замеров расхода воздуха двигателем, основываясь на замерах концентраций кислорода в ОГ.</li>
+    <li>Использование в расчете крутящего момента брутто или мощности брутто при расчете мощности двигателя нетто.</li>
+    <li>Использование в расчете "непосредственных" замеров расхода воздуха или рассчитываемых значений (при использовании во время испытаний измерительного сопла, согласно методике ЯМЗ).</li>
+    <li>Обратный расчет относительно оксидов азота, т.е. возможность рассчитать концентрации оксидов азота, исходя из значений удельных выбросов для каждой точки испытательного цикла.</li>
+    <li>Расчет степени рециркуляции отработавших газов, основываясь на замерах концентраций диоксида углерода в воздухе, поступающем в цилиндры двигателя, и в отработавших газах.</li>
+    <li>Расчет коэффициента избытка воздуха с учетом рециркуляции отработавших газов.</li>
+    <li>Оценка корректности замеров расхода воздуха двигателем, основываясь на замерах концентраций кислорода в отработавших газах.</li>
+    <li>Предварительный расчет частот вращения коленчатого вала двигателя A, B и C для стационарных циклов с Евро-3 по Евро-6.</li>
+    <li>Расчет дымности отработавших газов по испытательному циклу ELR.</li>
 </ul>
 <B>Люди, внесшие вклад в проект ценными советами:</B>
-<ol>
+<ul>
     <li>Борис Романович Бланкштейн</li>
     <li>Евгений Константинович Шприц</li>
     <li>Александр Малютин</li>
     <li>Андрей Кукушкин</li>
     <li>Дмитрий Епанешников</li>
-</ol>
+</ul>
 <B>Скриншоты:</B>
 <P>
 <IMG src="r49_scr1.png">
@@ -85,6 +89,9 @@
 </SPAN>
 <P>
 Определение числа непустых строк в текстовых файлах.
+<BR>
+<B>strcnt</B> является свободным программным обеспечением, 
+программа написана на языке программирования C++ с использованием Qt.
 <BR><BR>
 <B>Скриншоты:</B>
 <P>
