New link for r49 project (QuickStart document).

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,8 @@
 <FONT SIZE="5"><B>r49:</B></FONT>
 <SPAN>
     <A HREF="https://github.com/pa23/r49">Страница проекта</A> | 
-    <A HREF="https://github.com/pa23/r49/downloads">Загрузки</A>
+    <A HREF="https://github.com/pa23/r49/downloads">Загрузки</A> | 
+    <A HREF="https://github.com/downloads/pa23/r49/r49.QuickStart_ru.pdf">Быстрый старт</A>
 </SPAN>
 <P>
 Программный комплекс, предназначенный для расчета удельных выбросов вредных веществ 
