Some information about r49 project added.

--- a/projects.html
+++ b/projects.html
@@ -63,6 +63,7 @@
     <li>Расчет степени рециркуляции отработавших газов, основываясь на замерах концентраций диоксида углерода в воздухе, поступающем в цилиндры двигателя, и в отработавших газах.</li>
     <li>Расчет коэффициента избытка воздуха с учетом рециркуляции отработавших газов.</li>
     <li>Оценка корректности замеров расхода воздуха двигателем, основываясь на замерах концентраций кислорода в отработавших газах.</li>
+    <li>Использование в расчете выброса "твердых" частиц либо расхода разбавляющего воздуха, либо коэффициента разбавления.</li>
     <li>Предварительный расчет частот вращения коленчатого вала двигателя A, B и C для стационарных циклов с Евро-3 по Евро-6.</li>
     <li>Расчет дымности отработавших газов по испытательному циклу ELR.</li>
 </ul>
