Lost dates added in blog_archive.

--- a/blog_archive.html
+++ b/blog_archive.html
@@ -166,7 +166,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_10.30
+<FONT SIZE="5"><B>22.05.2010 - Релиз r49_10.30
 </B></FONT>
 <P>
 <ol>
@@ -178,7 +178,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_10.29
+<FONT SIZE="5"><B>20.05.2010 - Релиз r49_10.29
 </B></FONT>
 <P>
 <ol>
@@ -186,7 +186,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_10.28
+<FONT SIZE="5"><B>16.05.2010 - Релиз r49_10.28
 </B></FONT>
 <P>
 <ol>
@@ -202,7 +202,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_10.27
+<FONT SIZE="5"><B>10.05.2010 - Релиз r49_10.27
 </B></FONT>
 <P>
 <ol>
@@ -215,7 +215,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_10.26
+<FONT SIZE="5"><B>04.05.2010 - Релиз r49_10.26
 </B></FONT>
 <P>
 <ol>
@@ -223,7 +223,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_10.25
+<FONT SIZE="5"><B>29.04.2010 - Релиз r49_10.25
 </B></FONT>
 <P>
 <ol>
@@ -235,7 +235,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_10.23
+<FONT SIZE="5"><B>23.04.2010 - Релиз r49_10.23
 </B></FONT>
 <P>
 <ol>
@@ -243,7 +243,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_10.22
+<FONT SIZE="5"><B>23.04.2010 - Релиз r49_10.22
 </B></FONT>
 <P>
 <ol>
@@ -256,7 +256,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_10.18
+<FONT SIZE="5"><B>12.04.2010 - Релиз r49_10.18
 </B></FONT>
 <P>
 <ol>
@@ -268,7 +268,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Корректирующий релиз r49_10.15.1
+<FONT SIZE="5"><B>05.04.2010 - Корректирующий релиз r49_10.15.1
 </B></FONT>
 <P>
 <ol>
@@ -276,7 +276,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_10.15
+<FONT SIZE="5"><B>02.04.2010 - Релиз r49_10.15
 </B></FONT>
 <P>
 <ol>
@@ -287,7 +287,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Корректирующий релиз r49_10.13.1
+<FONT SIZE="5"><B>14.03.2010 - Корректирующий релиз r49_10.13.1
 </B></FONT>
 <P>
 <ol>
@@ -295,7 +295,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_10.13
+<FONT SIZE="5"><B>07.03.2010 - Релиз r49_10.13
 </B></FONT>
 <P>
 <ol>
@@ -304,7 +304,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_10.12
+<FONT SIZE="5"><B>16.02.2010 - Релиз r49_10.12
 </B></FONT>
 <P>
 <ol>
@@ -315,7 +315,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_10.11
+<FONT SIZE="5"><B>15.02.2010 - Релиз r49_10.11
 </B></FONT>
 <P>
 <ol>
@@ -332,7 +332,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_10.10
+<FONT SIZE="5"><B>14.01.2010 - Релиз r49_10.10
 </B></FONT>
 <P>
 <ol>
@@ -342,7 +342,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_10.5
+<FONT SIZE="5"><B>07.01.2010 - Релиз r49_10.5
 </B></FONT>
 <P>
 <ol>
@@ -360,7 +360,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Корректирующий релиз r49_2010.01.1
+<FONT SIZE="5"><B>01.01.2010 - Корректирующий релиз r49_2010.01.1
 </B></FONT>
 <P>
 <ol>
@@ -369,7 +369,7 @@
 </ol>
 </P>
 
-<FONT SIZE="5"><B>Релиз r49_2010.01
+<FONT SIZE="5"><B>31.12.2009 - Релиз r49_2010.01
 </B></FONT>
 <P>
 <ol>
