Filling blog_archive.

--- a/blog_archive.html
+++ b/blog_archive.html
@@ -24,7 +24,7 @@
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="background: #e6e6ff; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/blog_archive.html"><B>Архив</B></A></P>
+            <A HREF="http://pa23.github.com/blog_archive.html"><B>Архив (2009-2010)</B></A></P>
         </TD>
     </TR>
 </TABLE>
@@ -54,7 +54,7 @@
 </B></FONT>
 <P>
 <ol>
-    <li>Код libfuns перемещен в libtoxic.</li>
+    <li><B>Код libfuns перемещен в libtoxic. Библиотека libfuns удалена из состава дистрибутива.</B></li>
 </ol>
 </P>
 
@@ -310,7 +310,7 @@
 <ol>
     <li>В Qr49 параметры теперь применяются сразу же, без перезапуска программы.</li>
     <li>В файлы readme добавлена информация о сайте программы.</li>
-    <li>Из пакета исключена программа r49.</li>
+    <li><B>Из дистрибутива удалена программа r49. Ее функции выполняет Qr49.</B></li>
     <li>Qr49 теперь может работать без загрузки GUI, кроме M$ Windows. Со временем эта возможность будет добавлена и в Windows.</li>
 </ol>
 </P>
@@ -373,6 +373,7 @@
 </B></FONT>
 <P>
 <ol>
+    <li><B>В информации о релизах теперь будет фигурировать только версия дистрибутива r49 в целом, без указания версий программ и библиотек в него входящих.</B></li>
     <li>Добавлена возможность переопределения путей по умолчанию через конфигурационный файл r49.conf.</li>
     <li>Улучшения информационных диалогов Qr49.</li>
     <li>Диалоги открытия/сохранения файлов в Qr49 теперь "нативные".</li>
@@ -387,6 +388,599 @@
     <li>В Qr49 добавлена возможность расчета дымности по циклу ELR.</li>
     <li>Улучшения перевода на русский язык интерфейса Qr49.</li>
 </ol>
+</P>
+
+<FONT SIZE="5"><B>16.12.2009 - Релиз r49 v4.2.0
+</B></FONT>
+<P>
+<ol>
+    <li>Использование файла конфигурации.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>30.11.2009 - Релизы r49 v4.1.0, Qr49 v0.9.5, libtoxic v4.2.0
+</B></FONT>
+<P>
+<ol>
+    <li>Оптимизация кода.</li>
+    <li>Исправлена ошибка сегментирования в Qr49, проявляющаяся после проведения нескольких расчетов подряд.</li>
+    <li>Улучшения в диалогах Qr49 и pro-файлах.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>29.11.2009 - Релиз Qr49 v0.9.3
+</B></FONT>
+<P>
+<ol>
+    <li>Добавлена информация об используемых библиотеках в диалоге о программе.</li>
+    <li>В меню Файл добавлены функции для работы с отчетом.</li>
+    <li>Интерфейс программы переведен на русский язык.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>27.11.2009 - Релиз Qr49 v0.9.0
+</B></FONT>
+<P>
+<ol>
+    <li><B>Qr49 - аналог r49 с графическим интерфейсом на Qt4.</B></li>
+    <li>Реализована функция печати отчета.</li>
+    <li>Реализована функция сохранения отчета под другим именем.</li>
+    <li>Добавлен диалог о программе.</li>
+    <li>Реализованы операции копирования и вставки для таблицы с исходными данными "Расчет удельных выбросов".</li>
+    <li>Добавлен диалог ввода масс фильтров "твердых" частиц.</li>
+    <li>Добавлена кнопка для смены исходных данных для расчета удельных выбросов "твердых" частиц.</li>
+    <li>Реализованы арифметический функции для ячеек таблицы с исходными данными "Расчет удельных выбросов".</li>
+    <li>Реализована логика вкл/выкл для элементов интерфейса.</li>
+    <li>Добавлена информация о лицензии.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>25.11.2009 - Релизы r49 v4.0.1, libfuns v2.8.3, libtoxic v4.1.1
+</B></FONT>
+<P>
+<ol>
+    <li>Очистка пространства имен.</li>
+    <li>Исправления в расчете удельного выброса "твердых" частиц через массы на фильтрах.</li>
+    <li>В отчет добавлен параметр масса "твердых" частиц.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>16.11.2009 - Релизы libfuns v2.8.0, libtoxic v4.0.3
+</B></FONT>
+<P>
+<ol>
+    <li>Оптимизация кода.</li>
+    <li>Улучшения в сообщениях об ошибках.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>15.11.2009 - Релизы r49 v4.0.0, libfuns v2.7.2, libtoxic v4.0.1
+</B></FONT>
+<P>
+<ol>
+    <li>Поддержка Правил ЕЭК ООН No96 в полном объеме.</li>
+    <li>Оптимизация кода.</li>
+    <li><B>Расчеты точек циклов и удельных выбросов вынесены в библиотеку libtoxic.</B></li>
+    <li>Незначительные коррективы в форме отчета.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>14.11.2009 - Релиз r49 v3.9.0
+</B></FONT>
+<P>
+<ol>
+    <li>Расчет точек цикла Евро-0.</li>
+    <li>Расчет удельных выбросов по циклу Евро-0.</li>
+    <li>Новые имена для файлов с исходными данными.</li>
+    <li>Исправления в расчете alpha_O2.</li>
+    <li>Изменение точности вывода значений удельных выбросов в отчете.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>12.11.2009 - Релиз r49 v3.8.0
+</B></FONT>
+<P>
+<ol>
+    <li>Обновление встроенной справки.</li>
+    <li>Изменение значений по умолчанию для некоторых параметров командной строки.</li>
+    <li>Расчет удельных выбросов по циклу Евро-6.</li>
+    <li>Новые имена для файлов с исходными данными.</li>
+    <li>Использование формул для расчета Kwr и Khd из Правил ЕЭК ООН No49 Ревизия 4.</li>
+    <li>Расчет точек и удельных выбросов для циклов по ОСТ 37.001.234-81.</li>
+    <li>Улучшения в проверке параметров командной строки.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>09.11.2009 - Релиз r49 v3.6.0
+</B></FONT>
+<P>
+<ol>
+    <li>Новые имена для файлов с исходными данными.</li>
+    <li>Новый шаблон имени для файла отчета по 96-м Правилам.</li>
+    <li>Исправления в расчетах Gaird, Kwr и Khd по 96-м Правилам.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>08.11.2009 - Релиз r49 v3.5.1
+</B></FONT>
+<P>
+<ol>
+    <li>Возможность использования файла с исходными данными из 13 точек для расчета удельных выбросов по циклам Евро-3..Евро-5.</li>
+    <li>Улучшение в логике формирования отчета.</li>
+    <li>Оптимизация кода.</li>
+    <li>В отчет добавлена информация об используемой версии libfuns.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>05.11.2009 - Релиз r49 v3.4.2
+</B></FONT>
+<P>
+<ol>
+    <li>Добавлен расчет Kwr и Khd для циклов Евро-1 и Евро-2.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>04.11.2009 - Релизы r49 v3.4.1, libfuns v2.7.1
+</B></FONT>
+<P>
+<ol>
+    <li>Параметр командной строки cycle переименован в standatd.</li>
+    <li>В отчет добавлено сравнение полученных значений удельных выбросов вредных веществ с нормативом.</li>
+    <li>Обновление встроенной справки.</li>
+    <li>Улучшение информативности сообщений в libfuns.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>02.11.2009 - Релиз r49 v3.3.2
+</B></FONT>
+<P>
+<ol>
+    <li>Корректировки весовых коэффициентов.</li>
+    <li>Обновлена встроенная справка.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>01.11.2009 - Релиз r49 v3.3.0
+</B></FONT>
+<P>
+<ol>
+    <li>Расчет точек циклов Евро-1 и Евро-2.</li>
+    <li>Новые имена для файлов с исходными данными.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>04.09.2009 - Релиз r49 v3.2.1
+</B></FONT>
+<P>
+<ol>
+    <li>Формирование отчета по результатам расчета приведенной мощности по требованиям НАМИ.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>03.09.2009 - Релиз r49 v3.1.2
+</B></FONT>
+<P>
+<ol>
+    <li>Исправления в расчете pa.</li>
+    <li>Возможность расчета удельных выбросов "твердых" частиц по массам на фильтрах.</li>
+    <li>Оптимизация кода.</li>
+    <li>Обновление встроенной справки.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>30.08.2009 - Релизы r49 v3.0.0, libfuns v2.7.0
+</B></FONT>
+<P>
+<ol>
+    <li>Новые имена для файлов с исходными данными.</li>
+    <li>Изменен шаблон имени файла отчета.</li>
+    <li>Обновление встроенной справки.</li>
+    <li>Возможность расчета приведенной мощности по Правилам ЕЭК ООН No85.</li>
+    <li>Оптимизация кода.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>16.08.2009 - Релиз r49 v2.9.1
+</B></FONT>
+<P>
+<ol>
+    <li>Обновление встроенной справки.</li>
+    <li>Изменения в шапке отчета.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>12.08.2009 - Релиз r49 v2.9.0
+</B></FONT>
+<P>
+<ol>
+    <li>Дополнительная информация в комментарии к расчету в отчете.</li>
+    <li>Дополнительное значение для параметра командной строки PT.</li>
+    <li>Обновление встроенной справки.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>07.08.2009 - Релиз r49 v2.8.0
+</B></FONT>
+<P>
+<ol>
+    <li>Управление выводом дополнительных точек в отчет.</li>
+    <li>Улучшение логики формирования отчета.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>03.08.2009 - Релиз r49 v2.7.1
+</B></FONT>
+<P>
+<ol>
+    <li>Исправлена размерность концентрации кислорода.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>30.07.2009 - Релиз r49 v2.7.0
+</B></FONT>
+<P>
+<ol>
+    <li>Новые параметры командной строки.</li>
+    <li>Обновление встроенной справки.</li>
+    <li>Реализована функция проверки замеров расхода воздуха по alpha_O2 на выхлопе.</li>
+    <li>Дополнительная информация в комментарии к расчету в отчете.</li>
+    <li>Улучшение логики формирования отчета.</li>
+    <li>Оптимизация кода.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>24.07.2009 - Релизы r49 v2.6.0, libfuns v2.6.0
+</B></FONT>
+<P>
+<ol>
+    <li>Оптимизация кода.</li>
+    <li><B>Некоторые функции вынесены в отдельную библиотеку libfuns.</B></li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>19.07.2009 - Релиз r49 v2.5.3
+</B></FONT>
+<P>
+<ol>
+    <li>Во встроенную справку добавлено стандартное сообщение о лицензии.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>18.07.2009 - Релиз r49 v2.5.2
+</B></FONT>
+<P>
+<ol>
+    <li>Оптимизация кода.</li>
+    <li>Обновление встроенной справки.</li>
+    <li>Улучшения в структуре отчета.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>14.07.2009 - Релиз r49 v2.5.0
+</B></FONT>
+<P>
+<ol>
+    <li>Оптимизация кода.</li>
+    <li>Функция расчета чисел оборотов A, B, C теперь также рассчитывает и n_ref.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>08.07.2009 - Релиз r49 v2.4.9
+</B></FONT>
+<P>
+<ol>
+    <li>Проверка значения Dn.</li>
+    <li>Улучшение внешнего вида DateaTime в отчете.</li>
+    <li>Исправлена ошибка, приводящая к невозможности прочитать исходные данные если в путях к файлам содержатся пробелы.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>06.07.2009 - Релиз r49 v2.4.5
+</B></FONT>
+<P>
+<ol>
+    <li>Оптимизация работы с памятью.</li>
+    <li>Улучшение информативности сообщений, выдаваемых программой.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>05.07.2009 - Релиз r49 v2.4.3
+</B></FONT>
+<P>
+<ol>
+    <li>Исправлена ошибка сборки в Windows.</li>
+    <li>Улучшение информативности сообщений, выдаваемых программой.</li>
+    <li>Проверка значений, возвращаемых функцией парсинга параметров командной строки.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>04.07.2009 - Релиз r49 v2.4.0
+</B></FONT>
+<P>
+<ol>
+    <li>Исправлена ошибка сегментирования, проявляющаяся при условиях task=points cycle=FreeCalc.</li>
+    <li>Улучшен метод определения типа ОС.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>03.07.2009 - Релиз r49 v2.3.1
+</B></FONT>
+<P>
+<ol>
+    <li>Инициализация mytime перед использованием.</li>
+    <li>Обновление встроенной справки.</li>
+    <li>Улучшение информативности сообщений, выдаваемых программой.</li>
+    <li>Проверка возвращаемых значений функцией чтения данных в классе CyclePoints.</li>
+    <li>Исправления в расчете alpha_res.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>29.06.2009 - Релиз r49 v2.3.0
+</B></FONT>
+<P>
+<ol>
+    <li>Исправлена ошибка в структуре предварительных расчетов.</li>
+    <li>Исправлена размерность dPn в файле с исходными данными.</li>
+    <li>Автоматическое сохранение исходных данных в каталог с результатами.</li>
+    <li>Новый параметр командной строки SrcData.</li>
+    <li>Обновление встроенной справки.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>28.06.2009 - Релиз r49 v2.2.0
+</B></FONT>
+<P>
+<ol>
+    <li>Устранена утечка памяти.</li>
+    <li>Оптимизация кода.</li>
+    <li>Улучшение поведения программы в нештатных ситуациях.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>24.06.2009 - Релиз r49 v2.1.1
+</B></FONT>
+<P>
+<ol>
+    <li>Вывод в отчет alpha_res вместо alpha, если имел место расчет степени РОГ.</li>
+    <li>Исправлена размерность концентрации кислорода.</li>
+    <li>Исправления в расчете alpha_res.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>23.06.2009 - Релиз r49 v2.1.0
+</B></FONT>
+<P>
+<ol>
+    <li><B>День рождения у меня...</B></li>
+    <li>В форму отчета добавлена информация о версии программы.</li>
+    <li>Расчет степени РОГ и alpha_res.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>21.06.2009 - Релиз r49 v2.0.0
+</B></FONT>
+<P>
+<ol>
+    <li><B>Проект переименован в r49.</B></li>
+    <li>Обновление встроенной справки.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>18.06.2009 - Релиз r49esc v1.11.6
+</B></FONT>
+<P>
+<ol>
+    <li>Оптимизация работы с памятью.</li>
+    <li>Изменение значения по умолчанию для параметра командной строки PT.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>17.06.2009 - Релиз r49esc v1.11.5
+</B></FONT>
+<P>
+<ol>
+    <li>Коррективы в расчете Ffh.</li>
+    <li>Коррективы в обработке 8-ми ступенчатого цикла.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>16.06.2009 - Релиз r49esc v1.11.4
+</B></FONT>
+<P>
+<ol>
+    <li>Исправлена ошибка формата файла с исходными данными.</li>
+    <li>Исправлена ошибка - количество максимально возможных параметров в командной строке.</li>
+    <li>Исправлена ошибка в сообщении от функции парсинга параметров командной строки.</li>
+    <li>Обновление встроенной справки.</li>
+    <li>Определены значения по умолчанию для параметров командной строки.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>15.06.2009 - Релиз r49esc v1.11.0
+</B></FONT>
+<P>
+<ol>
+    <li>Обновление встроенной справки.</li>
+    <li>Возможность расчета мощности нетто через момент брутто или мощность брутто.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>13.06.2009 - Релиз r49esc v1.10.2
+</B></FONT>
+<P>
+<ol>
+    <li>Переименованы некоторые параметры командной строки.</li>
+    <li>Оптимизация кода.</li>
+    <li>Добавлена возможность "свободного" расчета.</li>
+    <li>Проверка количества точек при расчете 8-ми ступенчатого цикла.</li>
+    <li>Файлы исходных данных и временные файлы распределены по каталогам.</li>
+    <li>Исправлена ошибка определения типа ОС.</li>
+    <li>Обновление встроенной справки.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>12.06.2009 - Релиз r49esc v1.8.0
+</B></FONT>
+<P>
+<ol>
+    <li>Переименованы некоторые параметры командной строки.</li>
+    <li>Новый шаблон имени для файла отчета.</li>
+    <li>Расчет 8-ми ступенчатых циклов.</li>
+    <li>Новые имена для файлов с исходными данными.</li>
+    <li>Оптимизация кода.</li>
+    <li>Изменения структуры файлов с исходными данными.</li>
+    <li>Создание файла с отладочной информацией по расчетам (со всеми промежуточными результатами) по завершению расчетов.</li>
+    <li>Увеличено количество знаков после запятой для значения удельного выброса "твердых" частиц по циклу в отчете.</li>
+    <li>Обновление встроенной справки.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>04.06.2009 - Релиз r49esc v1.7.1
+</B></FONT>
+<P>
+<ol>
+    <li>Расчет расхода воздуха двигателем по разряжению на измерительном сопле.</li>
+    <li>Исправлена ошибка - количество максимально возможных параметров в командной строке.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>29.05.2009 - Релиз r49esc v1.6.2
+</B></FONT>
+<P>
+<ol>
+    <li>Добавлена информация о лицензии.</li>
+    <li>Устранена проблема сборки с помощью gcc 4.3.3.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>28.05.2009 - Релиз r49esc v1.5.0
+</B></FONT>
+<P>
+<ol>
+    <li>Проверка вводимых с консоли данных.</li>
+    <li>Расчет дымности по циклу ELR.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>26.05.2009 - Релиз r49esc v1.4.0
+</B></FONT>
+<P>
+<ol>
+    <li>Добавлен класс ProgramParameters.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>22.05.2009 - Релиз r49esc v1.3.4
+</B></FONT>
+<P>
+<ol>
+    <li>Проба CO всегда сухая.</li>
+    <li>Проба CH всегда влажная.</li>
+    <li>Обновление встроенной справки.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>15.05.2009 - Релиз r49esc v1.3.1
+</B></FONT>
+<P>
+<ol>
+    <li>Добавлена функция для преобразования чисел в строки.</li>
+    <li>Работа с датой/временем из tm структуры.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>12.05.2009 - Релиз r49esc v1.3.0
+</B></FONT>
+<P>
+<ol>
+    <li>Оптимизация кода.</li>
+    <li>Переписана функция чтения файлов CSV.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>09.05.2009 - Релиз r49esc v1.2.4
+</B></FONT>
+<P>
+<ol>
+    <li>Исправлена ошибка - один из параметров не был инициализирован при объявлении.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>08.05.2009 - Релиз r49esc v1.2.3
+</B></FONT>
+<P>
+<ol>
+    <li>Обновление встроенной справки.</li>
+    <li>Исправлена ошибка, приводящая к утечкам памяти в Windows.</li>
+    <li>3 последних точки цикла теперь не считаются дополнительными если общее их количество не равно 16.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>07.05.2009 - Релиз r49esc v1.2.0
+</B></FONT>
+<P>
+<ol>
+    <li>Расчет удельных выбросов "твердых" частиц по значениям дымности ОГ в 1/м.</li>
+    <li>Обратный расчет для NOx.</li>
+    <li>Возможность передачи параметров командной строки в любом порядке.</li>
+    <li>Обновление встроенной справки.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>06.05.2009 - Релиз r49esc v1.0.0
+</B></FONT>
+<P>
+<ol>
+    <li>Оптимизация кода.</li>
+    <li>Оптимизаци работы с памятью.</li>
+    <li>Обновление встроенной справки.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>25.04.2009 - Релиз r49esc v0.7
+</B></FONT>
+<P>
+<ol>
+    <li>Оптимизация кода.</li>
+    <li>Новые имена для файлов с исходными данными.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>09.04.2009 - Релиз r49esc v0.5
+</B></FONT>
+<P>
+<ol>
+    <li>Оптимизация кода.</li>
+    <li>Ключи программы заменены на операнды.</li>
+    <li>Расчет удельных выбросов "твердых" частиц по значениям дымности ОГ в % или FSN.</li>
+    <li>Улучшение информативности сообщений, выдаваемых программой.</li>
+    <li>В отчет добавлена информация о типе расчета удельного выброса "твердых" частиц.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>03.04.2009 - Релиз r49esc v0.4
+</B></FONT>
+<P>
+<ol>
+    <li>Новая форма отчета.</li>
+    <li>Добавлен расчет коэффициента избытка воздуха для дополнительных точек цикла.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>29.03.2009 - Релиз r49esc v0.1
+</B></FONT>
+<P>
+<ol>
+    <li>Расчет удельных выбросов по циклам Евро-3..Евро-5.</li>
+    <li>Автоматическая генерация отчета с результатами.</li>
+    <li>Добавлена встроенная справка.</li>
+</ol>
+</P>
+
+<FONT SIZE="5"><B>18.01.2009
+</B></FONT>
+<P>
+Начал работать над программой r49esc (расчет точек стационарых испытательных циклов дизельных двигателей и удельных выбросов вредных веществ с отработавшими газами).
 </P>
 
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
