--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/blog_archive.html">Архив</A></P>
+            <A HREF="http://pa23.github.com/blog_archive.html">Архив (2009-2010)</A></P>
         </TD>
     </TR>
 </TABLE>
