--- a/blog_archive.html
+++ b/blog_archive.html
@@ -747,11 +747,10 @@
 </ol>
 </P>
 
-<FONT SIZE="4"><B>23.06.2009 - Релиз r49 v2.1.0
+<FONT SIZE="4"><B>23.06.2009 - Релиз r49 v2.1.0 и День рождения у меня...
 </B></FONT>
 <P>
 <ol>
-    <li><B>День рождения у меня...</B></li>
     <li>В форму отчета добавлена информация о версии программы.</li>
     <li>Расчет степени РОГ и alpha_res.</li>
 </ol>
