Information about release r49-11.07 added. Information about r49 project updated.

--- a/blog.html
+++ b/blog.html
@@ -30,8 +30,22 @@
 </TABLE>
 <BR>
 
+<FONT SIZE="4"><B>03.02.2011 - Релиз 
+<A HREF="https://github.com/pa23/r49/downloads">r49-11.07</A>
+</B></FONT>
+<P>
+<ol>
+    <li>UTF-8 во всем проекте.</li>
+    <li>Новая версия класса csvRead.</li>
+    <li>Импорт данных из сторонних файлов, аналогичных получаемым на AVL Puma Open (пункт меню "Файл" - "Импорт данных", кнопка на панели инструментов, диалог "Импорт данных").</li>
+    <li>Автоматическое увеличение числа строк таблиц "Расчет удельных выбросов" и "Внешняя скоростная характеристика" при вставке и импорте данных.</li>
+    <li>Обновлена информация о стандартах (меню "Справка" - "Описание стандартов").</li>
+    <li>Обновлен перевод интерфейса на русский язык.</li>
+</ol>
+</P>
+
 <FONT SIZE="4"><B>27.01.2011 - Релиз 
-<A HREF="https://github.com/pa23/r49/downloads">r49-11.06</A>
+r49-11.06
 </B></FONT>
 <P>
 <ol>
