--- a/projects.html
+++ b/projects.html
@@ -38,10 +38,11 @@
 </SPAN>
 <P>
 Программный комплекс, предназначенный для расчета удельных выбросов вредных веществ 
-с отработавшими газами дизельных двигателей, испытываемых по стационарным циклам 
-на соответствие требованиям Правил ЕЭК ООН №49 Ревизия 1 и Ревизия 4 
-(нормативы с Евро-0 по Евро-6), Правил ЕЭК ООН №96 Ревизия 1, ОСТ 37.001.234-81, 
-ГОСТ 17.2.2.05-97, ГОСТ 30574-98 и ГОСТ Р 51249-99.
+с отработавшими газами дизельных двигателей, испытываемых по стационарным циклам на 
+соответствие требованиям Правил ЕЭК ООН №49 Ревизия 1 и Ревизия 4, Правил ЕЭК ООН 
+№96 Ревизия 1, ОСТ 37.001.234-81, ГОСТ 17.2.2.05-97, ГОСТ 30574-98 и ГОСТ Р 51249-99 
+(данные нормативные документы содержат также описание испытательных циклов и методики 
+расчета удельных выбросов вредных веществ).
 <BR>
 <B>r49</B> является свободным программным обеспечением и состоит из библиотеки <B>toxic</B> и программы <B>Qr49</B>. 
 Программный комплекс написан на языке программирования C++ с использованием Qt.
