Information about release r49-11.07 updated.

--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,7 @@
     <li>Автоматическое увеличение числа строк таблиц "Расчет удельных выбросов" и "Внешняя скоростная характеристика" при вставке и импорте данных.</li>
     <li>Обновлена информация о стандартах (меню "Справка" - "Описание стандартов").</li>
     <li>Обновлен перевод интерфейса на русский язык.</li>
+    <li>В составе дистрибутива (каталог Documentation) добавлено руководство "Быстрый старт".</li>
 </ol>
 </P>
 
