New note added in blog.

--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,14 @@
 </TABLE>
 <BR>
 
+<FONT SIZE="4"><B>04.02.2011 - Заметка
+</B></FONT>
+<P>
+<ol>
+    На <A HREF="https://github.com/pa23/r49/downloads">github</A> перезалиты сборки r49-11.07 с включенными значками в главном меню Qr49.
+</ol>
+</P>
+
 <FONT SIZE="4"><B>03.02.2011 - Релиз 
 <A HREF="https://github.com/pa23/r49/downloads">r49-11.07</A>
 </B></FONT>
@@ -83,7 +91,9 @@ r49-11.03
 
 <FONT SIZE="4"><B>07.01.2011 - Заметка</B></FONT>
 <P>
-I like github )
+<ol>
+    I like github )
+</ol>
 </P>
 
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
