--- a/projects.html
+++ b/projects.html
@@ -41,8 +41,6 @@
 с отработавшими газами дизельных двигателей, испытываемых по стационарным циклам на 
 соответствие требованиям Правил ЕЭК ООН №49 Ревизия 1 и Ревизия 4, Правил ЕЭК ООН 
 №96 Ревизия 1, ОСТ 37.001.234-81, ГОСТ 17.2.2.05-97, ГОСТ 30574-98 и ГОСТ Р 51249-99 
-(данные нормативные документы содержат также описание испытательных циклов и методики 
-расчета удельных выбросов вредных веществ).
 <BR>
 <B>r49</B> является свободным программным обеспечением и состоит из библиотеки <B>toxic</B> и программы <B>Qr49</B>. 
 Программный комплекс написан на языке программирования C++ с использованием Qt.
@@ -67,6 +65,12 @@
     <li>Использование в расчете выброса "твердых" частиц либо расхода разбавляющего воздуха, либо коэффициента разбавления.</li>
     <li>Предварительный расчет частот вращения коленчатого вала двигателя A, B и C для стационарных циклов с Евро-3 по Евро-6.</li>
     <li>Расчет дымности отработавших газов по испытательному циклу ELR.</li>
+    <li>Импорт данных из сторонних файлов, полученных с помощью таких систем управления испытательными стендами как, например, AVL PUMA Open.</li>
+</ul>
+<B>Ограничения:</B>
+<ul>
+    <li>r49 предназначен для обработки результатов испытаний только дизельных двигателей.</li>
+    <li>Расчет удельного выброса "твердых" частиц в r49 производится только для систем с частичным разбавлением и измерением потока.</li>
 </ul>
 <B>Люди, внесшие вклад в проект ценными советами:</B>
 <ul>
