Information about release r49-11.08 added.

--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,18 @@
 </TABLE>
 <BR>
 
+<FONT SIZE="4"><B>20.02.2011 - Релиз 
+<A HREF="https://github.com/pa23/r49/downloads">r49-11.08</A>
+</B></FONT>
+<P>
+<ol>
+    <li>В связи с неоднократными просьбами, названия параметров CNOx, CCO, CCH, CCO2in, CCO2out, CO2 изменены на C_NOx, C_CO, C_CH, C_CO2in, C_CO2out, C_O2.</li>
+    <li>Исправлена ошибка. Как оказалось, не работал чекбокс "Создавать отчеты" на панели конфигурации расчета (отчеты создавались вне зависимости от его состояния)...</li>
+    <li>Внутренние улучшения в диалоге импорта данных.</li>
+    <li>Обновлено руководство "Быстрый старт".</li>
+</ol>
+</P>
+
 <FONT SIZE="4"><B>04.02.2011 - Заметка
 </B></FONT>
 <P>
@@ -39,7 +51,7 @@
 </P>
 
 <FONT SIZE="4"><B>03.02.2011 - Релиз 
-<A HREF="https://github.com/pa23/r49/downloads">r49-11.07</A>
+r49-11.07
 </B></FONT>
 <P>
 <ol>
