Information about r49 project participants updated.

--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,7 @@
 <ul>
     <li>Борис Романович Бланкштейн</li>
     <li>Евгений Константинович Шприц</li>
+    <li>Алексей Иванович Атрохов</li>
     <li>Александр Малютин</li>
     <li>Андрей Кукушкин</li>
     <li>Дмитрий Епанешников</li>
