Information about release r49-11.10 added.

--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,18 @@
 <BR>
 
 <FONT SIZE="4"><B>20.02.2011 - Релиз 
-<A HREF="https://github.com/pa23/r49/downloads">r49-11.08</A>
+<A HREF="https://github.com/pa23/r49/downloads">r49-11.10</A>
+</B></FONT>
+<P>
+<ol>
+    <li>Исправлена ошибка. Некорректное обновление содержимого выпадающих списков диалога импорта данных.</li>
+    <li>Автоматическое перечитывание импортируемых данных из файла при изменении настроек импорта или изменении таблицы назначения.</li>
+    <li>Обновлено руководство "Быстрый старт".</li>
+</ol>
+</P>
+
+<FONT SIZE="4"><B>20.02.2011 - Релиз 
+r49-11.08
 </B></FONT>
 <P>
 <ol>
