--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
 <SPAN>
     <A HREF="https://github.com/pa23/r49">Страница проекта</A> | 
     <A HREF="https://github.com/pa23/r49/downloads">Загрузки</A> | 
-    <A HREF="https://github.com/downloads/pa23/r49/r49.QuickStart_ru.pdf">Быстрый старт</A>
+    <A HREF="https://github.com/downloads/pa23/r49/r49-11.10.QuickStart_ru.pdf">Быстрый старт</A>
 </SPAN>
 <P>
 Программный комплекс, предназначенный для расчета удельных выбросов вредных веществ 
