--- a/projects.html
+++ b/projects.html
@@ -32,9 +32,10 @@
 
 <FONT SIZE="6"><B>r49:</B></FONT>
 <SPAN>
-    <A HREF="https://github.com/pa23/r49">Страница проекта</A> | 
+    <A HREF="https://github.com/pa23/r49">Страница проекта на github.com</A> | 
     <A HREF="https://github.com/pa23/r49/downloads">Загрузки</A> | 
-    <A HREF="https://github.com/downloads/pa23/r49/r49-11.10.QuickStart_ru.pdf">Быстрый старт</A>
+    <A HREF="https://github.com/downloads/pa23/r49/r49-11.10.QuickStart_ru.pdf">Быстрый старт</A> | 
+    <A HREF="http://ru.wikipedia.org/wiki/R49">Статья на ru.wikipedia.org</A>
 </SPAN>
 <P>
 Программный комплекс, предназначенный для расчета удельных выбросов вредных веществ 
