--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
 <SPAN>
     <A HREF="https://github.com/pa23/r49">Страница проекта на github.com</A> | 
     <A HREF="https://github.com/pa23/r49/downloads">Загрузки</A> | 
-    <A HREF="https://github.com/downloads/pa23/r49/r49-11.10.QuickStart_ru.pdf">Быстрый старт</A> | 
+    <A HREF="https://github.com/downloads/pa23/r49/r49-11.10.QuickStart_ru.pdf">Руководство "Быстрый старт" (PDF)</A> | 
     <A HREF="http://ru.wikipedia.org/wiki/R49">Статья на ru.wikipedia.org</A>
 </SPAN>
 <P>
@@ -93,7 +93,7 @@
 
 <FONT SIZE="6"><B>strcnt:</B></FONT>
 <SPAN>
-    <A HREF="https://github.com/pa23/strcnt">Страница проекта</A> | 
+    <A HREF="https://github.com/pa23/strcnt">Страница проекта на github.com</A> | 
     <A HREF="https://github.com/pa23/strcnt/downloads">Загрузки</A>
 </SPAN>
 <P>
