New page links.html added.

--- a/projects.html
+++ b/projects.html
@@ -10,19 +10,23 @@
 <FONT SIZE="7"><B>pa23</B></FONT><BR><BR>
 <TABLE WIDTH=100% CELLPADDING=4 CELLSPACING=0>
     <TR VALIGN=TOP>
-        <TD WIDTH=25% STYLE="border: none; padding: 0cm">
+        <TD WIDTH=20% STYLE="border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
             <A HREF="http://pa23.github.com/">Главная</A></P>
         </TD>
-        <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
+        <TD WIDTH=20% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
             <A HREF="http://pa23.github.com/blog.html">Блог</A></P>
         </TD>
-        <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
+        <TD WIDTH=20% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="background: #e6e6ff; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
             <A HREF="http://pa23.github.com/projects.html"><B>Проекты</B></A></P>
         </TD>
-        <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
+        <TD WIDTH=20% STYLE="; border: none; padding: 0cm">
+            <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
+            <A HREF="http://pa23.github.com/links.html">Ссылки</A></P>
+        </TD>
+        <TD WIDTH=20% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
             <A HREF="http://pa23.github.com/blog_archive.html">Архив (2009-2010)</A></P>
         </TD>
