Some information corrected.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 <P>
 Я приветствую вас, посетитель! Мое имя - Артем Петров, 
-а данный сайт содержит информацию о моих проектах, релизах новых версий и просто некоторых мыслях. Надеюсь, что он будет вам полезен.
+а данный сайт содержит информацию о моих проектах, релизах новых версий и т.п. Надеюсь, что он будет вам полезен.
 <BR><BR>
-Немного о себе. Я люблю 
+Я люблю 
 <A HREF="http://ru.wikipedia.org/wiki/C%2B%2B">C++</A>. 
 Да, он не без темных мест, однако очень крут. Как справедливо заметил про C++ 
 <A HREF="http://cplusplus.dshevchenko.biz/">Денис Васильевич</A>: 
