--- a/projects.html
+++ b/projects.html
@@ -36,10 +36,10 @@
 
 <FONT SIZE="6"><B>r49:</B></FONT>
 <SPAN>
-    <A HREF="https://github.com/pa23/r49">Страница проекта на github.com</A> | 
+    <A HREF="https://github.com/pa23/r49">github.com</A> | 
     <A HREF="https://github.com/pa23/r49/downloads">Загрузки</A> | 
-    <A HREF="https://github.com/downloads/pa23/r49/r49-11.10.QuickStart_ru.pdf">Руководство "Быстрый старт" (PDF)</A> | 
-    <A HREF="http://ru.wikipedia.org/wiki/R49">Статья на ru.wikipedia.org</A>
+    <A HREF="https://github.com/downloads/pa23/r49/r49-11.10.QuickStart_ru.pdf">Быстрый старт (PDF)</A> | 
+    <A HREF="http://ru.wikipedia.org/wiki/R49">ru.wikipedia.org</A>
 </SPAN>
 <P>
 Программный комплекс, предназначенный для расчета удельных выбросов вредных веществ 
@@ -97,7 +97,7 @@
 
 <FONT SIZE="6"><B>strcnt:</B></FONT>
 <SPAN>
-    <A HREF="https://github.com/pa23/strcnt">Страница проекта на github.com</A> | 
+    <A HREF="https://github.com/pa23/strcnt">github.com</A> | 
     <A HREF="https://github.com/pa23/strcnt/downloads">Загрузки</A>
 </SPAN>
 <P>
