--- a/blog.html
+++ b/blog.html
@@ -34,6 +34,14 @@
 </TABLE>
 <BR>
 
+<FONT SIZE="4"><B>27.03.2011 - Заметка
+</B></FONT>
+<P>
+<ol>
+    На сайте создан раздел <A HREF="http://pa23.github.com/links.html">Ссылки</A>, где добавлена первая на финальный черновой вариант стандарта C++ 2011!
+</ol>
+</P>
+
 <FONT SIZE="4"><B>20.02.2011 - Релиз 
 <A HREF="https://github.com/pa23/r49/downloads">r49-11.10</A>
 </B></FONT>
