--- a/blog.html
+++ b/blog.html
@@ -34,6 +34,14 @@
 </TABLE>
 <BR>
 
+<FONT SIZE="4"><B>17.04.2011 - Заметка
+</B></FONT>
+<P>
+<ol>
+    <A HREF="http://pa23.github.com/links.html">Обновлена</A> ссылка на финальный черновой вариант стандарта C++ 2011.
+</ol>
+</P>
+
 <FONT SIZE="4"><B>27.03.2011 - Заметка
 </B></FONT>
 <P>
