--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
 </B></FONT>
 <P>
 <ol>
-    <A HREF="http://pa23.github.com/links.html">Обновлена</A> ссылка на финальный черновой вариант стандарта C++ 2011.
+    <A HREF="http://pa23.github.com/links.html">Обновлена</A> ссылка текст стандарта C++ 2011.
 </ol>
 </P>
 
