New website structure.

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
 </HEAD>
 <BODY LANG="ru-RU" LINK="#000080" VLINK="#800000" DIR="LTR">
 <FONT SIZE="7"><B>pa23</B></FONT><BR><BR>
-<TABLE WIDTH=100% CELLPADDING=4 CELLSPACING=0>
+<TABLE WIDTH=100% CELLPADDING=5 CELLSPACING=0>
     <TR VALIGN=TOP>
         <TD WIDTH=20% STYLE="border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
@@ -16,7 +16,7 @@
         </TD>
         <TD WIDTH=20% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="background: #e6e6ff; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/blog.html"><B>Блог</B></A></P>
+            <A HREF="http://pa23.github.com/blog.html">Блог</A></P>
         </TD>
         <TD WIDTH=20% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
@@ -28,7 +28,7 @@
         </TD>
         <TD WIDTH=20% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/blog_archive.html">Архив (2009-2010)</A></P>
+            <A HREF="http://pa23.github.com/blog_archive.html">Архив</A></P>
         </TD>
     </TR>
 </TABLE>
