--- a/projects/strcnt/strcnt.html
+++ b/projects/strcnt/strcnt.html
@@ -34,20 +34,30 @@
 </TABLE>
 <BR>
 
-<P>
 <ol>
     <FONT SIZE="5"><A HREF="http://pa23.github.com/projects/r49/r49.html">r49</A> </FONT>
-    - Программный комплекс, предназначенный для расчета удельных выбросов вредных веществ с отработавшими газами дизельных двигателей.
+    |
+    <FONT SIZE="5"><A HREF="http://pa23.github.com/projects/strcnt/strcnt.html"> <B>strcnt</B></A></FONT>
 </ol>
-</P>
 
+<B>strcnt. Ресурсы:</B>
+<SPAN>
+    <A HREF="https://github.com/pa23/strcnt">github.com</A> | 
+    <A HREF="https://github.com/pa23/strcnt/downloads">Загрузки</A>
+</SPAN>
 <P>
-<ol>
-    <FONT SIZE="5"><A HREF="http://pa23.github.com/projects/strcnt/strcnt.html">strcnt</A> </FONT>
-    - Определение числа непустых строк в текстовых файлах.
-</ol>
+Определение числа непустых строк в текстовых файлах.
+<BR>
+<B>strcnt</B> является свободным программным обеспечением, 
+программа написана на языке программирования C++ с использованием Qt.
+<BR><BR>
+<B>Скриншоты:</B>
+<P>
+<IMG src="strcnt_scr1.png">
+<IMG src="strcnt_scr2.png">
 </P>
-
+</P>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
 <P ALIGN=CENTER>
     <A HREF="https://github.com/pa23">github</A> | 
