Links to archive pages changed.

--- a/blog_archive.html
+++ b/blog_archive.html
@@ -35,9 +35,9 @@
 <BR>
 
 <ol>
-    <FONT><A HREF="http://pa23.github.com/projects/blog_archive/2009.html">2009</A> </FONT>
+    <FONT><A HREF="http://pa23.github.com/blog_archive/2009.html">2009</A> </FONT>
     |
-    <FONT><A HREF="http://pa23.github.com/projects/blog_archive/2010.html"> 2010</A></FONT>
+    <FONT><A HREF="http://pa23.github.com/blog_archive/2010.html"> 2010</A></FONT>
 </ol>
 
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
