Links to archive pages changed.

--- a/blog_archive/2009.html
+++ b/blog_archive/2009.html
@@ -35,9 +35,9 @@
 <BR>
 
 <ol>
-    <FONT><A HREF="http://pa23.github.com/projects/blog_archive/2009.html"><B>2009</B></A> </FONT>
+    <FONT><A HREF="http://pa23.github.com/blog_archive/2009.html"><B>2009</B></A> </FONT>
     |
-    <FONT><A HREF="http://pa23.github.com/projects/blog_archive/2010.html"> 2010</A></FONT>
+    <FONT><A HREF="http://pa23.github.com/blog_archive/2010.html"> 2010</A></FONT>
 </ol>
 
 <FONT SIZE="4"><B>31.12.2009 - Релиз r49_2010.01
