--- a/blog_archive/2010.html
+++ b/blog_archive/2010.html
@@ -35,9 +35,9 @@
 <BR>
 
 <ol>
-    <FONT><A HREF="http://pa23.github.com/projects/blog_archive/2009.html">2009</A> </FONT>
+    <FONT><A HREF="http://pa23.github.com/blog_archive/2009.html">2009</A> </FONT>
     |
-    <FONT><A HREF="http://pa23.github.com/projects/blog_archive/2010.html"> <B>2010</B></A></FONT>
+    <FONT><A HREF="http://pa23.github.com/blog_archive/2010.html"> <B>2010</B></A></FONT>
 </ol>
 
 <FONT SIZE="4"><B>23.11.2010 - Релиз r49_10.39
