New message in blog.

--- a/blog.html
+++ b/blog.html
@@ -34,6 +34,15 @@
 </TABLE>
 <BR>
 
+<FONT SIZE="4"><B>21.05.2011 - Заметка
+</B></FONT>
+<P>
+<ol>
+    Внес некоторые изменения в структуру сайта. Теперь каждый проект имеет свою страницу, а 
+    архив разбит на страницы по годам.
+</ol>
+</P>
+
 <FONT SIZE="4"><B>17.04.2011 - Заметка
 </B></FONT>
 <P>
